# AlbikarEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
AlbikarEditor/: CMakeLists.txt
AlbikarEditor/cmake/: imgui.cmake
AlbikarEditor/src/: Preferences.hpp  main.cpp
AlbikarEditor/src/core/: Application.cpp  Application.hpp  ApplicationArgs.cpp  ApplicationArgs.hpp  ApplicationInfo.cpp  ApplicationInfo.hpp  Project.cpp  Project.hpp
AlbikarEditor/src/gui/: AlbikarGui.cpp  AlbikarGui.hpp  AssetsPreviewWindow.cpp  AssetsPreviewWindow.hpp  AssetsWindow.cpp  AssetsWindow.hpp  DockspaceWindow.cpp  DockspaceWindow.hpp  EngineProperties.cpp  EngineProperties.hpp  GameViewWindow.cpp  GameViewWindow.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  IWindowEngine.hpp  IWindowObject.hpp  InspectorWindow.cpp  InspectorWindow.hpp  LogWindow.cpp  LogWindow.hpp  MainWindow.cpp  MainWindow.hpp  MonitorsWindow.cpp  MonitorsWindow.hpp  ProfilerWindow.cpp  ProfilerWindow.hpp  SceneViewWindow.cpp  SceneViewWindow.hpp  StyleManager.cpp  StyleManager.hpp  TopBarWindow.cpp  TopBarWindow.hpp  TopBarWindowBuild.cpp  TopBarWindowBuild.hpp  TopBarWindowCenterLabel.cpp  TopBarWindowCenterLabel.hpp  TopBarWindowDebug.cpp  TopBarWindowDebug.hpp  TopBarWindowEdit.cpp  TopBarWindowEdit.hpp  (+6 more)
AlbikarEditor/src/gui/guiRenderEngine/: GLWindowEngine.cpp  GLWindowEngine.hpp  VKWindowEngine.cpp  VKWindowEngine.hpp
AlbikarEditor/src/platform/: Platform.cpp  Platform.hpp  PlatformMac.cpp  PlatformUnix.cpp  PlatformWin.cpp
AlbikarEditor/src/utils/: AlbikarLogger.cpp  AlbikarLogger.hpp  Instrumentation.cpp  Instrumentation.hpp  LogInfo.cpp  LogInfo.hpp  Logger.hpp  Profiler.hpp
AlbikarEditor/thirtParts/AlbikarEngine/include/: AlbikarDefines.hpp  IAlbikarWindow.hpp
AlbikarEngine/: CMakeLists.txt
AlbikarEngine/cmake/: glm.cmake  shader.cmake
AlbikarEngine/include/: AlbikarDefines.hpp  IAlbikarDebug.hpp  IAlbikarEngine.hpp  IEngineProperties.hpp
AlbikarEngine/src/: Defines.hpp  Preferences.hpp
AlbikarEngine/src/debug/: AlbikarDebug.cpp  AlbikarDebug.hpp
AlbikarEngine/src/engine/: AlbikarEngine.cpp  AlbikarEngine.hpp  EngineInfo.cpp  EngineInfo.hpp  EngineProperties.cpp  EngineProperties.hpp
AlbikarEngine/src/render/: AlbikarRenderer.cpp  AlbikarRenderer.hpp  FrontEnd.cpp  FrontEnd.hpp  IBackEnd.hpp
AlbikarEngine/src/render/vulkan/: BackEnd.cpp  BackEnd.hpp  Instance.cpp  Instance.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanUtils.cpp  VulkanUtils.hpp
AlbikarEngine/src/utils/: AlbikarLogger.cpp  AlbikarLogger.hpp  LogInfo.cpp  LogInfo.hpp  Logger.hpp
AlbikarEngine/src/window/: AlbikarWindow.cpp  AlbikarWindow.hpp
AlbikarEngine/tests/: CMakeLists.txt  main.cpp
AlbikarEngine/tests/engine/: AlbikarEngine.cpp
ThirtParts/: CMakeLists.txt
ThirtParts/cmake/: glfw.cmake  gtest.cmake  pugixml.cmake  vulkan.cmake
